fix: add z-index to language menu to prevent overlapping of slider controls

--- a/Resources/Public/Css/Frontend/manual.css
+++ b/Resources/Public/Css/Frontend/manual.css
@@ -345,6 +345,7 @@ blockquote .icon {
     position: fixed;
     right: .5rem;
     top: .5rem;
+    z-index: 2;
 }
 
 .language-menu ul, .language-menu ul li {
